# v10

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_flags.txt  default.nix  flake.nix  shell.nix  ugdb.nix  v10.pc
.github/: README.md
include/: animation.h  armature.h  camera.h  cubemap.h  entity.h  error.h  framebuffer.h  input.h  light.h  material.h  mesh.h  model.h  model_presets.h  node.h  render_texture.h  rendering.h  scene_object.h  shader.h  skybox.h  texture.h  window.h
include/glad/: glad.h
include/lib/: list.h
include/v10/: animation.h  armature.h  camera.h  cubemap.h  entity.h  framebuffer.h  input.h  light.h  material.h  mesh.h  model.h  node.h  shader.h  skybox.h  texture.h  window.h
include/v10/lib/: list.h
include/v10/lib/glad/: glad.h
models/: AnimatedCube.gltf  BoxTextured.glb  InterpolationTest.gltf  SM_Deccer_Cubes_Textured_Complex.gltf  arrow.glb  flashlight.glb  home.blend  home.blend1  home.glb  light.glb  nodes_test.fbx  nodes_test.glb  quit.glb  quit1.glb  suzanne.glb  untitled.glb
shaders/: depth.frag  depth.vert  depth_cubemap.frag  depth_cubemap.geom  depth_cubemap.vert  depth_dirlight.frag  depth_dirlight.vert  depth_quad.frag  depth_quad.vert  depth_skinning.vert  depth_skinning_cubemap.vert  depth_skinning_dirlight.vert  fragment_shader.frag  fragment_shader.glsl  light_affected.frag  light_affected.vert  light_affected_frag.glsl  light_affected_tex_frag.glsl  light_affected_vert.glsl  light_frag.glsl  light_source.frag  light_source.vert  light_source_frag.glsl  light_source_vert.glsl  light_vert.glsl  skinning.vert  skinning_vert.glsl  skybox.frag  skybox.vert  vertex_shader.glsl  vertex_shader.vert
src/: animation.c  armature.c  camera.c  camera.h  cubemap.c  entity.c  error.c  framebuffer.c  glad.c  input.c  input.h  light.c  main.c  material.c  mesh.c  mesh.h  model.c  model.h  model_presets.c  node.c  render_texture.c  renderer.c  renderer.h  rendering.c  rendering.h  scene_object.c  shader.c  shader.h  skybox.c  texture.c  texture.h  window.c  window.h
src/glad/: glad.c  glad.h
src/v10/: animation.c  armature.c  camera.c  cubemap.c  entity.c  error.c  framebuffer.c  glad.c  input.c  light.c  material.c  mesh.c  model.c  node.c  rendering.c  shader.c  skybox.c  stb_image.c  texture.c  window.c
textures/cubemaps/sky/: nz  py  pz
textures/sky_cubemap/: ny
